# NetTempReader

./: .gitmodules  AirSensor.proto  CMakeLists.txt  README.md  generate_proto.sh
Arduino/: sendscript.sh
Arduino/NetTempArduino/: AirSensor.pb.c  AirSensor.pb.h  NetTempArduino.ino
Arduino/NetTempArduinoESP8266/: AirSensor.pb.c  AirSensor.pb.h  DHT.cpp  Defines.h  NetTempArduinoESP8266.ino
includes/: AirSensor.pb.h  CMakeLists.txt  socket.hpp
sources/: CMakeLists.txt  main.cpp
